--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               <p class="old-price old-price-one">1000 ₽</p>
               <p class="price">800 ₽</p>
             </div>
-            <button class="shop-button" type="button"><span class="visually-hidden">Кнопка В магазин</span>В
+            <button class="shop-button" type="button">В
               магазин</button>
           </div>
         </div>
@@ -413,7 +413,7 @@
               <p class="old-price old-price-two">500 ₽</p>
               <p class="price">3500 ₽</p>
             </div>
-            <button class="shop-button" type="button"><span class="visually-hidden">Кнопка В магазин</span>В
+            <button class="shop-button" type="button">В
               магазин</button>
           </div>
         </div>
@@ -437,7 +437,7 @@
               <p class="old-price old-price-three">500 ₽</p>
               <p class="price">400 ₽</p>
             </div>
-            <button class="shop-button" type="button"><span class="visually-hidden">Кнопка В магазин</span>В
+            <button class="shop-button" type="button">В
               магазин</button>
           </div>
         </div>
@@ -472,8 +472,10 @@
 
   <div class="overlay _hidden">
     <div class="popup">
-      <img src="svg/form-x.svg" alt="Кнопка закрыть" class="close-button">
-      <span class="begin begin-popup">ваш фидбек</span>
+      <button class="close-button">
+        <span class="visually-hidden">кнопка закрыть</span>
+      </button>
+      <h2 class="begin begin-popup">ваш фидбек</h2>
       <form class="form">
         <div class="form-group">
           <label class="select-group">
